istio/envoy/eds-filesystem/envoy.yaml
node:
  id: envoy_001
  cluster: testcluster

admin:
  address:
    socket_address: { address: 0.0.0.0, port_value: 9091 }

static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 80 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: http
                codec_type: AUTO
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: web_service_1
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: webcluster1
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: webcluster1
      connect_timeout: 0.25s
      type: EDS
      eds_cluster_config:
        service_name: webcluster1
        eds_config:
          path: "./eds.yaml"
          resource_api_version: "V3"
